--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					//}
 					window.openAllLinksWithBlankTargetInSystemBrowser();
 					// Make sure to include the scheme (e.g. http://) in the URL.
-					mxapp.initialize("http://tieniber.ddns.net:8080", enableOffline);
+					mxapp.initialize("http://localhost:8080", enableOffline);
 				});
 			}
 
