--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					//}
 					window.openAllLinksWithBlankTargetInSystemBrowser();
 					// Make sure to include the scheme (e.g. http://) in the URL.
-					mxapp.initialize("http://10.0.0.2:8080", enableOffline);
+					mxapp.initialize("http://10.0.0.2:3080", enableOffline);
 				});
 			}
 
@@ -100,7 +100,7 @@
 						}
 					}
 				};
-				xhr.open("POST", "http://10.0.0.2:8080/login/", true);
+				xhr.open("POST", "http://10.0.0.2:3080", true);
 				xhr.withCredentials = true;
 				xhr.send(params);
 			} else {
