--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						}
 					}
 				};
-				xhr.open("POST", "http://10.0.0.2:8080", true);
+				xhr.open("POST", "http://10.0.0.2:8080/login", true);
 				xhr.withCredentials = true;
 				xhr.send(params);
 			} else {
