--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-
+        <script src  "js/js.cookie.js"></script>
         <script src="cordova.js"></script>
         <script src="js/bundle.js"></script>
 		<script src="js/jquery.min.js"></script>
