--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 				});
 			}
 
+
+
 			if (window.localStorage && window.localStorage.loginToken) {
 				var params = "loginToken=" + window.localStorage.loginToken;
 				var xhr = new XMLHttpRequest();
@@ -106,6 +108,7 @@
 			} else {
 				window.startApp();
 			}
+      CookieManager.getInstance().setAcceptCookie(true);
     </script>
 		<script type="text/javascript">
 			document.write( '<style>.hiding-footer{display:none}@media(min-height:' + (window.innerHeight - 50) + 'px){.hiding-footer{display:block}}</style>' );
