--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
              var newhour = 300;
              if (((new Date) - pausedate) > newhour)
              {
-                 alert("HEY")
+                logtout();
              }
          }
 
