--- a/index.html
+++ b/index.html
@@ -79,23 +79,24 @@
 			}
 
 			window.startApp = function() {
-        document.addEventListener("pause", onPause, false);
-        function onPause() {
-            pausedate = new Date();
-        }
-        document.addEventListener("resume", onResume, false);
-        function onResume() {
-            var newhour = 300;
-            if (((new Date) - pausedate) > newhour)
-            {
-                alert("HEY");
-            }
-        }
+
 				document.addEventListener("deviceready", function() {
 					//if the splashscreen plugin exists, show it.
 					//if (navigator && navigator.splashscreen) {
 					//	navigator.splashscreen.show();
 					//}
+          document.addEventListener("pause", onPause, false);
+          function onPause() {
+              pausedate = new Date();
+          }
+          document.addEventListener("resume", onResume, false);
+          function onResume() {
+              var newhour = 300;
+              if (((new Date) - pausedate) > newhour)
+              {
+                  alert("Hey");
+              }
+          }
 					window.openAllLinksWithBlankTargetInSystemBrowser();
 					// Make sure to include the scheme (e.g. http://) in the URL.
 					mxapp.initialize("http://192.168.1.10:8080/", enableOffline);
