--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               diffhour = (new Date) - pausedate;
               if (diffhour > newhour)
               {
-
+                  mx.logout();
                   alert("For your security, you've been automatically logged out due to inactivity");
               }
           }
