--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
           }
           document.addEventListener("resume", onResume, false);
           function onResume() {
-              newhour = 40000;
+              newhour = 10000;
               diffhour = (new Date) - pausedate;
               if (diffhour > newhour)
               {
                   mx.logout();
+                  setTimeout(function(){
                   alert("For your security, you've been automatically logged out due to inactivity");
+                },10);
               }
           }
 
