--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       }
       document.addEventListener("resume", onResume, false);
       function onResume() {
+          debugger;
           var newhour = 10000;
           var diffhour = (new Date) - pausedate;
           if (diffhour > newhour)
