--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           diffhour = (new Date) - pausedate;
           if (diffhour > newhour)
           {
-              logout();
+              mx.logout();
               console.log("logout");
               alert("For your security, you've been automatically logged out due to inactivity");
               console.log("show alert message");
