--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
               {
                   mx.logout();
                   console.log("logout");
+                  setTimeout(function(){
                   alert("For your security, you've been automatically logged out due to inactivity");
                   console.log("show alert message");
+                },0);
 
               }
           }
