--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           }
           document.addEventListener("resume", onResume, false);
           function onResume() {
-              var newhour = 27000;
+              var newhour = 2800000;
               diffhour = (new Date) - pausedate;
               if (diffhour > newhour)
               {
