--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               {
                   setTimeout(function(){
                     mx.logout();
-                    navigator.notification.alert("Test",function(){},"Alert","Close");
+                    navigator.notification.alert("For your security, you've been automatically logged out due to inactivity",function(){},"Alert","Close");
                 },0);
 
               }
